@@ -50,6 +50,9 @@ MIDIboxSEQ V4.095
 
    o ProgramChange Layer: steps now disabled by default when the track is cleared
 
+   o Whenever a track or parameter layer is unmuted, it will be automatically selected
+     This option can now be disabled in the OPTIONS page (item 9/29)
+
    o experimental (might be optional in future): show measure and pattern step position in main screen
 
 
